--- a/publications.html
+++ b/publications.html
@@ -13,7 +13,7 @@
 
 <h2>Books</h2>
 <ul>
-  <li>Clark, J.W. (2016). A Data Engineer's Manual. Leanpub.</li>
+  <li>Clark, J.W. (2016). <a href="https://leanpub.com/data-engineers-manual">A Data Engineer's Manual</a>. Leanpub.</li>
 </ul>
 
 <h2>Peer-reviewed Articles</h2>
